# ts_assignment

./: .gitignore  README.md  hydra_coffee_example.ipynb  pyproject.toml  requirements.txt
experiments/: pipeline.py
experiments/hydra/code/: __init__.py  _newmps_hydra.py  hydra.py  optimised_hydra.py
experiments/init_models/: __init__.py  aeon_hydra.py  dtw_1nn.py  hydra.py  hydra_explainable.py  lr_classifier.py  lr_explainable.py  mrsqm.py  mrsqm_explainable.py  optimised_aeon_hydra.py  optimised_hydra.py  rf_classifier.py
experiments/mrsqm/: run.py
experiments/results/: comparison.ipynb  cpu_hydra_summary.csv  evaluate_results.py  mps_hydra_summary.csv  mrsqm_vs_hyrda_utils.py  og_aeon_summary.csv  optimal_sequence_length.csv  optimised_aeon_summary.csv  optimised_hydra_summary.csv  results_eda.ipynb  saliency_map - Coffee.ipynb  saliency_map.ipynb  temp_aeon_summary.csv  tmp.csv  tmp_summary.csv
experiments/results/aeon_tmp/: AllGestureWiimoteX__aeon_hydra__seed42.json  Beef__aeon_hydra__seed42.json  Chinatown__aeon_hydra__seed42.json  Computers__aeon_hydra__seed42.json  DiatomSizeReduction__aeon_hydra__seed42.json  ECG5000__aeon_hydra__seed42.json  EOGHorizontalSignal__aeon_hydra__seed42.json  FaceAll__aeon_hydra__seed42.json  FaceFour__aeon_hydra__seed42.json  FiftyWords__aeon_hydra__seed42.json  Fish__aeon_hydra__seed42.json  FreezerSmallTrain__aeon_hydra__seed42.json  Fungi__aeon_hydra__seed42.json  (+19 more)
experiments/utils/: __init__.py  data_utils.py  explainability.py  model_utils.py  mylogger.py  saliency_map.ipynb
hydra/evaluations/: run.py
(+729 files in other folders)
