[project]
name = "assignments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aeon[classification]>=1.3.0",
    "mrsqm>=0.0.7",
    "numpy==2.2.6",
    "pandas<=3.0.0",
    "psutil>=7.2.2",
    "scikit-learn>=0.23",
    "torch>=2.10.0",
]
