[project]
name = "assignments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aeon[classification]>=1.3.0",
    "dtaidistance>=2.4.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "mrsqm>=0.0.7",
    "numpy==2.2.6",
    "pandas<=3.0.0",
    "psutil>=7.2.2",
    "scikit-learn>=0.23",
    "scikit-posthocs>=0.12.0",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
]
